rename to emptyFirst/emptyLast